fix menu icons on mobile devices

--- a/src/app.scss
+++ b/src/app.scss
@@ -31,4 +31,10 @@ body {
 	cursor: pointer;
 	position: absolute;
 	left: 50px;
+	
+	@media (max-width: 920px) {
+		top: 20px;
+		left: 20px;
+		bottom: initial;
+	}
 }
