--- a/src/widgets/Menu/style.scss
+++ b/src/widgets/Menu/style.scss
@@ -52,7 +52,13 @@
 		bottom: 50px;
 		cursor: pointer;
 		left: 50px;
-		position: absolute;
+		position: fixed;
+
+		@media (max-width: 920px) {
+			top: 20px;
+			left: 20px;
+			bottom: initial;
+		}
 	}
 
 	&__item {
